--- a/style.css
+++ b/style.css
@@ -222,6 +222,7 @@ section {
 
 /* About page */
 .details_container {
+  padding-top: 3rem;
   position: relative;
   justify-content: center;
   flex-direction: column;
@@ -268,7 +269,7 @@ footer {
   color: white;
   text-align: center;
   padding: 10px;
-  position: relative;
+  position: fixed;
   bottom: 0;
   margin: 0%;
   width: 100%;
@@ -368,6 +369,7 @@ footer {
   border-radius: 2rem;
   border: #23b5d3 0.1rem solid;
   text-align: center;
+  align-items: center;
   box-shadow: 0 10px 10px rgba(35, 181, 211, 0.5);
 }
 
